--- a/src/app/secure-section/shared/term-picker-panel/term-picker-panel.component.sass
+++ b/src/app/secure-section/shared/term-picker-panel/term-picker-panel.component.sass
@@ -82,6 +82,7 @@
 
 @include tablet-screen()
   .dropdown-menu
+    width: 100%
     margin-bottom: 10px
   .terms-group
     margin-right: 10px
