--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -241,8 +241,8 @@ a
     // padding-left: 210px
     // padding-right: 210px
   .container
-    width: 920px
-    // width: 1020px
+    // width: 920px
+    width: 1020px
 
 @include tablet-screen()
   section
